syntax = "proto3";

option csharp_namespace = "OrderService.Grpc";

package order;

service OrderService {
  rpc ValidateOrder (ValidateOrderRequest) returns (ValidateOrderResponse);
}

message ValidateOrderRequest {
  int32 orderId = 1;
}

message ValidateOrderResponse {
  bool exists = 1;
  string message = 2;
  OrderDetails order = 3;
}

message OrderDetails {
  int32 orderId = 1;
  int32 userId = 2;
  string status = 3;
  double totalAmount = 4;
  string createdAt = 5;
  string updatedAt = 6;
} 